--- a/app/src/main/res/layout/activity_detail_match.xml
+++ b/app/src/main/res/layout/activity_detail_match.xml
@@ -4,14 +4,12 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.exapmle.ozanasan.finaltwo.WeekDetailActivity">
+    tools:context="com.exapmle.ozanasan.finaltwo.DetailMatchActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Ozan is waiting"
-        android:id="@+id/textView"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:textSize="18dp" />
+        android:id="@+id/matchHeader"
+        android:text="@string/hello_world"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </RelativeLayout>
