--- a/app/src/main/res/layout/weeks_row.xml
+++ b/app/src/main/res/layout/weeks_row.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent" android:descendantFocusability="blocksDescendants">
 
     <EditText
         android:layout_width="200dp"
@@ -11,7 +11,8 @@
         android:textAlignment="center"
         android:text="you score : 6500"
         android:paddingLeft="25dp"
-        android:editable="false"/>
+        android:editable="false"
+        android:focusable="false"/>
 
     <EditText
         android:layout_width="200dp"
@@ -24,7 +25,8 @@
         android:text="11/03/2015"
         android:paddingLeft="25dp"
         android:textSize="10dp"
-        android:editable="false"/>
+        android:editable="false"
+        android:focusable="false"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -36,5 +38,6 @@
         android:layout_alignParentStart="true"
         android:layout_alignBottom="@+id/dateText"
         android:text="Week X"
-        android:editable="false" />
+        android:editable="false"
+        android:focusable="false"/>
 </RelativeLayout>
